add example of nonpersistent replicant

--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -11,6 +11,10 @@
       <input type="text" id="replicant-b"></div>
       <button id="update-replicant-b">Update</button>
     </div>
+    <div>
+      <input type="text" id="replicant-d"></div>
+      <button id="update-replicant-d">Update</button>
+    </div>
     <script type="module" src="dashboard.bundle.js"></script>
   </body>
 </html>
